test/files/neg/macro-deprecate-idents.check
macro-deprecate-idents.scala:3: error: macro is now a reserved word; usage as an identifier is disallowed
  val macro = ???
      ^
macro-deprecate-idents.scala:7: error: macro is now a reserved word; usage as an identifier is disallowed
  var macro = ???
      ^
macro-deprecate-idents.scala:11: error: macro is now a reserved word; usage as an identifier is disallowed
  type macro = Int
       ^
macro-deprecate-idents.scala:15: error: macro is now a reserved word; usage as an identifier is disallowed
  class macro
        ^
macro-deprecate-idents.scala:19: error: macro is now a reserved word; usage as an identifier is disallowed
  class macro
        ^
macro-deprecate-idents.scala:23: error: macro is now a reserved word; usage as an identifier is disallowed
  object macro
         ^
macro-deprecate-idents.scala:27: error: macro is now a reserved word; usage as an identifier is disallowed
  object macro
         ^
macro-deprecate-idents.scala:31: error: macro is now a reserved word; usage as an identifier is disallowed
  trait macro
        ^
macro-deprecate-idents.scala:35: error: macro is now a reserved word; usage as an identifier is disallowed
  trait macro
        ^
macro-deprecate-idents.scala:38: error: macro is now a reserved word; usage as an identifier is disallowed
package macro {
        ^
macro-deprecate-idents.scala:39: error: macro is now a reserved word; usage as an identifier is disallowed
  package macro.bar {
          ^
macro-deprecate-idents.scala:44: error: macro is now a reserved word; usage as an identifier is disallowed
  package macro.foo {
          ^
macro-deprecate-idents.scala:49: error: macro is now a reserved word; usage as an identifier is disallowed
  val Some(macro) = Some(42)
           ^
macro-deprecate-idents.scala:50: error: macro is now a reserved word; usage as an identifier is disallowed
  macro match {
  ^
macro-deprecate-idents.scala:51: error: macro is now a reserved word; usage as an identifier is disallowed
    case macro => println(macro)
         ^
macro-deprecate-idents.scala:51: error: macro is now a reserved word; usage as an identifier is disallowed
    case macro => println(macro)
                          ^
macro-deprecate-idents.scala:56: error: macro is now a reserved word; usage as an identifier is disallowed
  def macro = 2
      ^
macro-deprecate-idents.scala:4: error: '=' expected but '}' found.
}
^
macro-deprecate-idents.scala:8: error: '=' expected but '}' found.
}
^
macro-deprecate-idents.scala:43: error: '{' expected.
package foo {
^
macro-deprecate-idents.scala:46: error: '{' expected but '}' found.
}
^
macro-deprecate-idents.scala:53: error: ')' expected but '}' found.
}
^
22 errors found
